--- a/templates/order.html
+++ b/templates/order.html
@@ -11,13 +11,15 @@
 	
 	{{ form.csrf_token }}
 	{{ form_field(form.name) }}
+	{{ form_field(form.email) }}
+
 	{{ form_field(form.street) }}
 	{{ form_field(form.street2) }}
 	{{ form_field(form.city) }}
 	{{ form_field(form.state) }}
 	{{ form_field(form.zip_code) }}
 	{{ form_field(form.country) }}
-
+	
 	{{ form_field(form.username) }}
 	{{ form_field(form.price) }}
 
