--- a/templates/layout.html
+++ b/templates/layout.html
@@ -40,6 +40,19 @@
 
       <!-- Begin page content -->
       <div class="container">
+          {% with messages = get_flashed_messages(with_categories=true) %}
+          {% if messages %}
+            {% for category, message in messages %}
+            <div class="alert alert-{{ category }} fade in flash">
+              <button type="button" class="close" data-dismiss="alert">&times;</button>
+              {% if message.split('-')[0] %}
+                <h3>{{ message.split(' - ')[0] }}</h3>
+              {% endif %}
+              <p>{{ message.split(' - ')[1] }}</p>
+            </div>
+            {% endfor %}
+          {% endif %}
+        {% endwith %}
         {% block body %}{% endblock body %}
       </div>
     </div>
@@ -52,6 +65,13 @@
 
     <!-- include scripts here -->
     <script src="/static/js/jquery-2.0.3.min.js"></script>
+    <script src="/static/js/alert.js"></script>
+    <script src="/static/js/button.js"></script>
+    <script src="/static/js/dropdown.js"></script>
+    <script src="/static/js/modal.js"></script>
+    <script src="/static/js/popover.js"></script>
+    <script src="/static/js/tooltip.js"></script>
+    <script src="/static/js/transition.js"></script>
     {% block javascript %}
     {% endblock javascript %}
   </body>
