--- a/templates/receipt.html
+++ b/templates/receipt.html
@@ -14,7 +14,7 @@
 	</div>
 </p>
 
-<table class="table table-striped receipt-details">
+<table class="table table-striped table-bordered receipt-details">
 	<tr>
 		<td>Date</td>
 		<td>{{ order.date.strftime('%m-%d-%Y') }}</td>
